--- a/GoalGridApp/wwwroot/index.html
+++ b/GoalGridApp/wwwroot/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="GoalGridApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
 </head>
 
 <body>
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -24,9 +25,7 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
-
-   
-
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
 </body>
 
